[package]
name = "cairn-tools"
version = "0.1.0"
edition = "2021"
license = "BSL-1.1"
publish = false

[lib]
path = "src/lib.rs"

[features]
default = []
# Forwards to cairn-runtime/in-memory-runtime so tests that construct
# concrete TaskServiceImpl / InMemoryServices remain compilable. Default
# builds skip these test modules.
in-memory-runtime = ["cairn-runtime/in-memory-runtime"]

[dependencies]
cairn-domain = { path = "../cairn-domain" }
cairn-graph  = { path = "../cairn-graph" }
cairn-plugin-proto = { path = "../cairn-plugin-proto" }
cairn-runtime = { path = "../cairn-runtime" }
cairn-store   = { path = "../cairn-store" }
cairn-github  = { path = "../cairn-github" }
async-trait = "0.1"
schemars = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex    = { version = "1",    default-features = false, features = ["std", "perf", "unicode-case", "unicode-perl"] }
reqwest  = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
tokio    = { version = "1",    features = ["process", "time"] }

[dev-dependencies]
cairn-tools-derive = { path = "../cairn-tools-derive" }
tokio    = { version = "1",    features = ["rt", "macros", "process", "time"] }
tempfile = "3"

